[build-system]
requires = [
    "hatchling"
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages=["src/ascii_monet"]

[project]
name = "ascii-monet"
version = "0.0.1"
authors = [{ name="Matt Stirling", email="stirlingmattmarkus@gmail.com" }]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "opencv-python==4.11.0.86"
]

[project.scripts]
ascii-monet = "ascii_monet.cli:main"


[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"
